[package]
name = "tx-fun"
version = "0.1.0"
edition = "2021"

[dependencies]
# bdk = { version = "0.29.0", features = ["electrum"] }
bitcoin = { version = "0.31.0", features = ["rand", "rand-std", "base64"] }
clap = { version = "4.5.4", features = ["derive"] }
electrum-client = { version = "0.19.0" }
miniscript = { version = "11.0.0" }
